// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', icon: 'checkTick' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      Object {
        "backgroundColor": "#AAEEEF",
        "borderColor": "#003B3D",
      },
    ]
  }
>
  <Text
    color="turquoise-850"
    defaultColor="black"
    defaultWeight="Regular"
    font="ReadexPro"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 20,
      }
    }
    style={
      Array [
        Object {
          "paddingVertical": 2,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20,
        },
        Object {
          "color": "#003B3D",
          "fontFamily": "Readex Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Hello
  </Text>
  <RNSVGSvgView
    accessibilityElementsHidden={true}
    accessibilityLabel=""
    accessible={false}
    align="xMidYMid"
    bbHeight={24}
    bbWidth={24}
    focusable={false}
    height={24}
    importantForAccessibility="no-hide-descendants"
    meetOrSlice={0}
    minX={0}
    minY={0}
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "borderWidth": 0,
        },
        Object {
          "color": "#003B3D",
        },
        Object {
          "flex": 0,
          "height": 24,
          "width": 24,
        },
      ]
    }
    tintColor="#003B3D"
    vbHeight={24}
    vbWidth={24}
    width={24}
  >
    <RNSVGGroup
      fill={
        Object {
          "payload": 4278190080,
          "type": 0,
        }
      }
    >
      <RNSVGPath
        clipRule={0}
        d="M17.7071 9.29289C18.0976 9.68342 18.0976 10.3166 17.7071 10.7071L11.4142 17C10.6332 17.781 9.36684 17.7811 8.58579 17L5.29289 13.7071C4.90237 13.3166 4.90237 12.6834 5.29289 12.2929C5.68342 11.9024 6.31658 11.9024 6.70711 12.2929L10 15.5858L16.2929 9.29289C16.6834 8.90237 17.3166 8.90237 17.7071 9.29289Z"
        fill={
          Object {
            "type": 2,
          }
        }
        fillRule={0}
        propList={
          Array [
            "fill",
            "fillRule",
          ]
        }
      />
    </RNSVGGroup>
  </RNSVGSvgView>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'error' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      Object {
        "backgroundColor": "#FFE0E0",
        "borderColor": "#761F1F",
      },
    ]
  }
>
  <Text
    color="error-850"
    defaultColor="black"
    defaultWeight="Regular"
    font="ReadexPro"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 20,
      }
    }
    style={
      Array [
        Object {
          "paddingVertical": 2,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20,
        },
        Object {
          "color": "#761F1F",
          "fontFamily": "Readex Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'info' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      Object {
        "backgroundColor": "#E1F5FE",
        "borderColor": "#215C76",
      },
    ]
  }
>
  <Text
    color="info-850"
    defaultColor="black"
    defaultWeight="Regular"
    font="ReadexPro"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 20,
      }
    }
    style={
      Array [
        Object {
          "paddingVertical": 2,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20,
        },
        Object {
          "color": "#215C76",
          "fontFamily": "Readex Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'neutral' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      Object {
        "backgroundColor": "#AAEEEF",
        "borderColor": "#003B3D",
      },
    ]
  }
>
  <Text
    color="turquoise-850"
    defaultColor="black"
    defaultWeight="Regular"
    font="ReadexPro"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 20,
      }
    }
    style={
      Array [
        Object {
          "paddingVertical": 2,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20,
        },
        Object {
          "color": "#003B3D",
          "fontFamily": "Readex Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'success' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      Object {
        "backgroundColor": "#E1F4E1",
        "borderColor": "#224021",
      },
    ]
  }
>
  <Text
    color="success-850"
    defaultColor="black"
    defaultWeight="Regular"
    font="ReadexPro"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 20,
      }
    }
    style={
      Array [
        Object {
          "paddingVertical": 2,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20,
        },
        Object {
          "color": "#224021",
          "fontFamily": "Readex Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Hello
  </Text>
</View>
`;

exports[`Test ToastNotification component should match snapshot for props ({ message: 'Hello', variant: 'warning' }) 1`] = `
<View
  accessibilityLabel="Hello"
  accessibilityRole="alert"
  accessible={true}
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 8,
        "borderWidth": 1,
        "flexDirection": "row",
        "justifyContent": "space-between",
        "padding": 16,
      },
      Object {
        "backgroundColor": "#FFF5DA",
        "borderColor": "#614C15",
      },
    ]
  }
>
  <Text
    color="warning-850"
    defaultColor="black"
    defaultWeight="Regular"
    font="ReadexPro"
    fontStyle={
      Object {
        "fontSize": 16,
        "lineHeight": 20,
      }
    }
    style={
      Array [
        Object {
          "paddingVertical": 2,
        },
        Object {
          "fontSize": 16,
          "lineHeight": 20,
        },
        Object {
          "color": "#614C15",
          "fontFamily": "Readex Pro",
          "fontStyle": "normal",
          "fontWeight": "400",
        },
      ]
    }
    weight="Regular"
  >
    Hello
  </Text>
</View>
`;
